# Mobilite_mel

./: classification_report.csv  confusion_matrix.csv  model_summary.txt  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/d599473e5b224dad90f9137e569eb268/: meta.yaml
mlruns/0/d599473e5b224dad90f9137e569eb268/artifacts/random_forest_model/: MLmodel  python_env.yaml
mlruns/0/d599473e5b224dad90f9137e569eb268/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/df45ecb6128b4a99bd0072a2bcc50930/: meta.yaml
mlruns/0/df45ecb6128b4a99bd0072a2bcc50930/artifacts/: model_summary.txt
mlruns/0/df45ecb6128b4a99bd0072a2bcc50930/artifacts/random_forest_model/: MLmodel  conda.yaml
mlruns/0/df45ecb6128b4a99bd0072a2bcc50930/tags/: mlflow.log-model.history  mlflow.runName
mlruns/118521442832754302/: meta.yaml
mlruns/118521442832754302/bf763598d5134164b6035946c899e983/: meta.yaml
mlruns/118521442832754302/bf763598d5134164b6035946c899e983/artifacts/logistic_regression_model/: MLmodel  (+2 more)
mlruns/118521442832754302/bf763598d5134164b6035946c899e983/metrics/: Accuracy  MAE  MSE  R-squared  RMSE
mlruns/118521442832754302/bf763598d5134164b6035946c899e983/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/164503788187078116/: meta.yaml
mlruns/164503788187078116/2801155d596c478db2be457366b859d3/: meta.yaml
mlruns/164503788187078116/2801155d596c478db2be457366b859d3/metrics/: Accuracy
mlruns/164503788187078116/2801155d596c478db2be457366b859d3/tags/: mlflow.log-model.history  mlflow.source.name
src/models/: LogisticRegression.py  randomForest.py
streamlit/: app.py
(+1 files in other folders)
